Widgets: list + map

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8" />
     <!-- Title and description -->
     <title>Apptvate</title>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB2bLUPtzYcv-FljJVB4fgNO7AxX5fF7Gg" async defer></script>
     <!-- Webpack injects styles here -->
   </head>
   <body>
